--- a/locale/es.po
+++ b/locale/es.po
@@ -70,3 +70,6 @@ msgstr "Pagado"
 msgctxt "model:ir.message,text:msg_assigned"
 msgid "Assigned"
 msgstr "Asignado"
+msgctxt "model:ir.message,text:msg_assigned"
+msgid "Deletion attempt"
+msgstr "Intento de eliminación"
